# duplicate-file-finder

./: .gitignore  Makefile  README.md  classes.mmd  pyproject.toml
doc/: classes.mmd
src/duplicatefile/: __init__.py  duplicatefile.py
test_fic/: doc copie 2.txt  doc2.txt
